content layout complete

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
 
     <!-- Triangle SVG SECTION -->
-    <svg class="top-triangle" xmlns="http://www.w3.org/2000/svg" width="500" height="300" viewBox="0 0 842 597">
+    <svg class="top-triangle top-triangle-shift-contact" xmlns="http://www.w3.org/2000/svg" width="500" height="300" viewBox="0 0 842 597">
         <g id="Polygon_2" data-name="Polygon 2" transform="translate(842 597) rotate(180)">
             <path d="M 841.0355834960938 596.5 L 0.9644368290901184 596.5 L 421 0.8675912618637085 L 841.0355834960938 596.5 Z" stroke="none"/>
-            <path d="M 421 1.73516845703125 L 1.9288330078125 596 L 840.0711669921875 596 L 421 1.73516845703125 M 421 -6.103515625e-05 L 842 597 L 0 597 L 421 -6.103515625e-05 Z" stroke="none" fill="#707070"/>
+            <path d="M 421 1.73516845703125 L 1.9288330078125 596 L 840.0711669921875 596 L 421 1.73516845703125 M 421 -6.103515625e-05 L 842 597 L 0 597 L 421 -6.103515625e-05 Z" stroke="none" fill="#000000"/>
         </g>
     </svg>
 
-    <svg class="bottom-left-triangle" xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
+    <svg class="bottom-left-triangle left-triangle-shift" xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
         <g id="Path_1" data-name="Path 1">
             <path d="M 390.0206298828125 539.5 L 0.5 539.5 L 0.5 1.543138742446899 L 390.0206298828125 539.5 Z" stroke="none"/>
-            <path d="M 1 3.086181640625 L 1 539 L 389.0412902832031 539 L 1 3.086181640625 M 0 0 L 391 540 L 0 540 L 0 0 Z" stroke="none" fill="#707070"/>
+            <path d="M 1 3.086181640625 L 1 539 L 389.0412902832031 539 L 1 3.086181640625 M 0 0 L 391 540 L 0 540 L 0 0 Z" stroke="none" fill="#000000"/>
         </g>
     </svg>
 
-    <svg class="bottom-right-triangle"  xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
+    <svg class="bottom-right-triangle right-triangle-shift"  xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
         <g id="Path_1" data-name="Path 1">
             <path d="M 390.5 539.5 L 0.9793838262557983 539.5 L 390.5 1.543138742446899 L 390.5 539.5 Z" stroke="none"/>
-            <path d="M 390 3.086181640625 L 1.958709716796875 539 L 390 539 L 390 3.086181640625 M 391 0 L 391 540 L 0 540 L 391 0 Z" stroke="none" fill="#707070"/>
+            <path d="M 390 3.086181640625 L 1.958709716796875 539 L 390 539 L 390 3.086181640625 M 391 0 L 391 540 L 0 540 L 391 0 Z" stroke="none" fill="#000000"/>
         </g>
     </svg>
     <!-- End Triangle SVG SECTION -->
@@ -63,11 +63,11 @@
         </ul>
     </nav>
 
-    <div class="container-title">
+    <section class="container container-title">
         <h1>DUVAL</h1>
-    </div>
+    </section>
 
-    <section class="container-about">
+    <section class="container container-about">
         <div class="about-left">
             <h2>My name is</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus molestias reprehenderit mollitia quidem tenetur quaerat, quam, corporis incidunt inventore excepturi quas deserunt autem odio placeat dolorem, at voluptatibus enim?</p>
@@ -77,6 +77,20 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia quas aliquam fugit animi in expedita, corrupti iure sapiente vel aperiam amet culpa aliquid quibusdam, facere, iusto commodi. Obcaecati, excepturi.</p>
         </div>
         <img class="about-img" src="./assets/img/Rochester.png" alt="Rochester Flower">
+    </section>
+
+    <section class="container container-portfolio">
+        <div class="box box1"></div>
+        <h2>Portfolio</h2>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+        <div class="box"></div>
+    </section>
+
+    <section class="container container-contact">
+        <img src="./assets/img/Castleton and Fam.png" alt="Castleton">
+        <div class="contact-background-fill"></div>
     </section>
 
 
