--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Duval Design</title>
 </head>
 <body>
+    <section class="video-background">
+        <video id="backgroundVideo" src="./assets/video/background.mp4" autoplay loop muted></video>
+    </section>
 
     <!-- Triangle SVG SECTION -->
     <svg class="top-triangle" xmlns="http://www.w3.org/2000/svg" width="500" height="300" viewBox="0 0 842 597">
