--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="video-background">
-        <video id="backgroundVideo" src="./assets/video/background.mp4" autoplay loop muted></video>
+        <video id="backgroundVideo" src="./assets/video/tbg.webm" autoplay loop muted></video>
     </section>
 
     <!-- Triangle SVG SECTION -->
