beb links added to bottom of site

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                 <i class="fab fa-git"></i>
                 <i class="fab fa-bootstrap"></i>
                 <i class="fab fa-adobe"></i>
+                <i class="fab fa-react"></i>
+                <i class="fab fa-mongodb"></i>
             </div>
         </div>
         <img class="about-img" src="./assets/img/Rochester.png" alt="Rochester Flower">
@@ -173,15 +175,11 @@
         <img src="./assets/img/Castleton and Fam.png" alt="Castleton">
         <div class="contact-background-fill">
             <h2 class="contact-header-mobile">Contact me</h2>
-            <form class="contact-form" action="https://formspree.io/xlewkkag" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="_replyto" placeholder="Email">
-                <label for="message">Message:</label>
-                <textarea name="message" id="message" placeholder="Message"></textarea> <br>
-                <input id="btn-submit" type="submit" value="Submit">
-            </form>
+            <div class="web-links-contact">
+                <a href="https://github.com/georgegombert" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/george-gombert-77652a118" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://georgegombert.github.io/Homepage/" target="_blank"><i class="fas fa-globe"></i></a>
+            </div>
         </div>
     </section>
 
