--- a/assets/pages/strtUp.html
+++ b/assets/pages/strtUp.html
@@ -9,30 +9,30 @@
     <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Duval Design</title>
 </head>
 <body>
     <section class="video-background">
-        <video id="backgroundVideo" src="./assets/video/tbg.webm" autoplay loop muted></video>
+        <video id="backgroundVideo" src="../video/tbg.webm" autoplay loop muted></video>
     </section>
 
     <!-- Triangle SVG SECTION -->
-    <svg class="top-triangle" xmlns="http://www.w3.org/2000/svg" width="500" height="300" viewBox="0 0 842 597">
+    <svg class="top-triangle top-triangle-shift" xmlns="http://www.w3.org/2000/svg" width="500" height="300" viewBox="0 0 842 597">
         <g id="Polygon_2" data-name="Polygon 2" transform="translate(842 597) rotate(180)">
             <path d="M 841.0355834960938 596.5 L 0.9644368290901184 596.5 L 421 0.8675912618637085 L 841.0355834960938 596.5 Z" stroke="none"/>
             <path d="M 421 1.73516845703125 L 1.9288330078125 596 L 840.0711669921875 596 L 421 1.73516845703125 M 421 -6.103515625e-05 L 842 597 L 0 597 L 421 -6.103515625e-05 Z" stroke="none" fill="#000000"/>
         </g>
     </svg>
 
-    <svg class="bottom-left-triangle" xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
+    <svg class="bottom-left-triangle left-triangle-shift" xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
         <g id="Path_1" data-name="Path 1">
             <path d="M 390.0206298828125 539.5 L 0.5 539.5 L 0.5 1.543138742446899 L 390.0206298828125 539.5 Z" stroke="none"/>
             <path d="M 1 3.086181640625 L 1 539 L 389.0412902832031 539 L 1 3.086181640625 M 0 0 L 391 540 L 0 540 L 0 0 Z" stroke="none" fill="#000000"/>
         </g>
     </svg>
 
-    <svg class="bottom-right-triangle"  xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
+    <svg class="bottom-right-triangle right-triangle-shift"  xmlns="http://www.w3.org/2000/svg" width="391" height="540" viewBox="0 0 391 540">
         <g id="Path_1" data-name="Path 1">
             <path d="M 390.5 539.5 L 0.9793838262557983 539.5 L 390.5 1.543138742446899 L 390.5 539.5 Z" stroke="none"/>
             <path d="M 390 3.086181640625 L 1.958709716796875 539 L 390 539 L 390 3.086181640625 M 391 0 L 391 540 L 0 540 L 391 0 Z" stroke="none" fill="#000000"/>
@@ -63,11 +63,11 @@
     <!-- End Burger SVG -->
     
     <nav id="navBar">
-        <img id="home" src="./assets/img/Logo.png" alt="logo">
+        <img id="home" src="../img/Logo.png" alt="logo">
         <ul>
-            <li id="about">About</li>
-            <li id="portfolio">Portfolio</li>
-            <li id="contact">Contact</li>
+            <a href="../../index.html">
+                <li> &larr; Back to home</li>
+            </a>
         </ul>
         <!-- Burger SVG -->
         <svg class="burger" id="burger" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="57" height="66"
@@ -159,7 +159,6 @@
         <div class="box box-strtup">
             <img src="./assets/img/strtUp.png" alt="strtUP">
             <div id="strtupBtn" class="hidden button-background">
-                <a href="./assets/pages/strtUp.html"><button>View Project Page</button></a>
                 <a href="https://brentp24.github.io/strtUP/" target="_blank"><button>View Project</button></a>
             </div>
         </div>
@@ -195,6 +194,6 @@
 
     <!-- Main js script -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <script src="./assets/scripts/main.js"></script>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
