styled boxes added

--- a/assets/pages/strtUp.html
+++ b/assets/pages/strtUp.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/startUp.css">
     <title>Duval Design</title>
 </head>
 <body>
@@ -101,96 +101,35 @@
                 <li id="contact">Contact</li>
             </ul>
         </div>
-        <div class="web-links">
+        <div class="web-links-project">
             <a href="https://github.com/georgegombert" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/george-gombert-77652a118" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
     <!-- end mobile nav container -->
 
-    <section class="container container-title">
-        <h1>DUVAL</h1>
-        <h2>Web developing since 2020</h2>
-    </section>
-
-    <section class="container container-about">
-        <div class="about-left">
-            <h2>Hi, I'm George</h2>
-            <br>
-            <p>Front end web developer based out of Salt Lake City. Working as a carpenter and making the switch to building websites on the internet. I enjoy theater, design, and spend most of my free time outside. Looking to work in some fun projects. Let me know what I can do for you!</p>
+    <section class="container">
+        <div class="container-title">
+            <h1>strtUP</h1>
         </div>
-        <div class="about-right">
-            <h2>Skills</h2>
+        <div class="container-about">
+            <h3>strtUP was built to be a customizable browser homepage meant for users that would like to access lots of different information when they first open their browser. This was a collaborative project between three developers and relies heavily on API functionality and css styles.</h3>
+        </div>
+        <div class="container-tech">
+            <h2>Technologies Used</h2>
             <div class="skill-grid">
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-js-square"></i>
-                <i class="fab fa-python"></i>
                 <i class="fab fa-git"></i>
-                <i class="fab fa-bootstrap"></i>
-                <i class="fab fa-adobe"></i>
-                <i class="fab fa-react"></i>
-                <i class="fab fa-mongodb"></i>
             </div>
         </div>
-        <img class="about-img" src="./assets/img/Rochester.png" alt="Rochester Flower">
-    </section>
-
-    <section class="container container-portfolio">
-        <div class="box box-planner">
-            <img src="./assets/img/Planner.png" alt="Daily Planner">
-            <div id="plannerBtn" class="hidden button-background">
-                <a href="https://georgegombert.github.io/Homework_5/" target="_blank"><button>View Project</button></a>
-            </div>
-        </div>
-        <h2 class="portfolio-header">Portfolio</h2>
-        <div class="box box-password">
-            <img src="./assets/img/Password.png" alt="Password Generator">
-            <div id="passwordBtn" class="hidden button-background">
-                <a href="https://georgegombert.github.io/Homework_3/" target="_blank"><button>View Project</button></a>
-            </div>
-        </div>
-        <div class="box box-hatcher">
-            <img src="./assets/img/Clara.png" alt="Clara Hatcher">
-            <div id="hatcherBtn" class="hidden button-background">
-                <a href="https://georgegombert.github.io/Clara-website/" target="_blank"><button>View Project</button></a>
-            </div>
-        </div>
-        <div class="box box-strtup">
-            <img src="./assets/img/strtUp.png" alt="strtUP">
-            <div id="strtupBtn" class="hidden button-background">
-                <a href="https://brentp24.github.io/strtUP/" target="_blank"><button>View Project</button></a>
-            </div>
-        </div>
-        <div class="box box-weather">
-            <img src="./assets/img/Weather.png" alt="Weather App">
-            <div id="weatherBtn" class="hidden button-background">
-                <a href="https://georgegombert.github.io/Homework_6/" target="_blank"><button>View Project</button></a>
-            </div>
+        <div class="web-links">
+            <a href="https://github.com/brentp24/strtUP" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://brentp24.github.io/strtUP/" target="_blank"><i class="fas fa-globe"></i></a>
         </div>
     </section>
-
-    <section class="container container-contact">
-        <h2 class="contact-header hidden">Contact <br> Me</h2>
-        <img src="./assets/img/Castleton and Fam.png" alt="Castleton">
-        <div class="contact-background-fill">
-            <h2 class="contact-header-mobile">Contact me</h2>
-            <form class="contact-form" action="https://formspree.io/xlewkkag" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="_replyto" placeholder="Email">
-                <label for="message">Message:</label>
-                <textarea name="message" id="message" placeholder="Message"></textarea> <br>
-                <input id="btn-submit" type="submit" value="Submit">
-            </form>
-            <div class="web-links-contact">
-                <a href="https://github.com/georgegombert" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/george-gombert-77652a118" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://georgegombert.github.io/Homepage/" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-        </div>
-    </section>
+    
 
     <!-- Main js script -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
