--- a/assets/pages/strtUp.html
+++ b/assets/pages/strtUp.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/startUp.css">
+    <link rel="stylesheet" href="../styles/project.css">
     <title>Duval Design</title>
 </head>
 <body>
@@ -113,7 +113,7 @@
             <h1>strtUP</h1>
         </div>
         <div class="container-about">
-            <h3>strtUP was built to be a customizable browser homepage meant for users that would like to access lots of different information when they first open their browser. This was a collaborative project between three developers and relies heavily on API functionality and css styles.</h3>
+            <h4>strtUP was built to be a customizable browser homepage meant for users that would like to access lots of different information when they first open their browser. This was a collaborative project between three developers and relies heavily on API functionality and css styles.</h4>
         </div>
         <div class="container-tech">
             <h2>Technologies Used</h2>
@@ -123,6 +123,11 @@
                 <i class="fab fa-js-square"></i>
                 <i class="fab fa-git"></i>
             </div>
+        </div>
+        <div class="project-imgs">
+            <img src="../img/strtUp-2.png" alt="strtUP">
+            <img src="../img/strtUp.png" alt="strtUP">
+            <img src="../img/strtUp-3.png" alt="strtUP">
         </div>
         <div class="web-links">
             <a href="https://github.com/brentp24/strtUP" target="_blank"><i class="fab fa-github"></i></a>
