adding react favicon

--- a/assets/pages/myCarFace.html
+++ b/assets/pages/myCarFace.html
@@ -121,6 +121,7 @@
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-js-square"></i>
+                <i class="fab fa-react"></i>
                 <i class="fab fa-git"></i>
             </div>
         </div>
